--- a/color/default.css
+++ b/color/default.css
@@ -6,17 +6,17 @@ a:hover {
 	color:#e96b56;
 }
 #inner-headline ul.breadcrumb li a {
-	color:#e96b56;
+	color:red;
 }
 
 /* heading */
 h1 span.colored, h2 span.colored,h3 span.colored,h4 span.colored,h5 span.colored,h6 span.colored {
-	color:#e96b56;
+	color:red;
 }
 
 /* menu */
 .navbar nav ul.nav li.dropdown ul.dropdown-menu li a:active,.navbar nav ul.nav li.dropdown ul.dropdown-menu li a:focus {
-  background: #e96b56;
+  background: red;
 }
 ul.topmenu li a:hover {
 	color:#e96b56;
@@ -25,7 +25,7 @@ ul.topmenu li a:hover {
 .navbar .nav > .active > a,
 .navbar .nav > .active > a:hover,
 .navbar .nav > .active > a:focus {
-  background: #e96b56;
+  background: red;
 }
 
 header ul.nav .dropdown-menu li > a:hover,
@@ -33,31 +33,31 @@ header ul.nav .dropdown-menu li > a:hover,
 .dropdown-submenu:hover > a, 
 .dropdown-menu .active > a,
 .dropdown-menu .active > a:hover {
-  background: #e96b56;
+  background: red;
 }
 
 /* slider */
 .camera_prev > span:before {
-  background: #e96b56;
+  background: red;
 }
 .camera_next > span:before {
-  background: #e96b56;
+  background: red;
 }
 
 /* parallax c slider */
 .da-arrows span.da-arrows-prev:before {
-  background: #e96b56;
+  background: red;
 }
 .da-arrows span.da-arrows-next:before {
-  background: #e96b56;
+  background: red;
 }
 .da-slide .da-link:hover{
-	background: #e96b56;
-	border: 4px solid #e96b56;
+	background: red;
+	border: 4px solid red;
 }
 
 .da-dots span{
-	background: #e96b56;
+	background: red;
 }
 
 
@@ -78,156 +78,156 @@ input[type="search"]:focus,
 input[type="tel"]:focus,
 input[type="color"]:focus,
 .uneditable-input:focus {
-  border-color: #e96b56;
+  border-color: red;
 }
 
 form#contactform .validation {
-	color:#e96b56;
+	color:red;
 }
 #sendmessage {
-	border:1px solid #e96b56;
+	border:1px solid red;
 
 }
 
 /* tabs */
 div.tabs  ul.nav-tabs li.active a {
-	border-top: 2px solid #e96b56;
-	color:#e96b56;
+	border-top: 2px solid red;
+	color:red;
 }
 div.tabbable.tabs-left  ul.nav-tabs li.active a {
-	border-left: 2px solid #e96b56;
-		color:#e96b56;
+	border-left: 2px solid red;
+		color:red;
 }
 div.tabbable.tabs-right  ul.nav-tabs li.active a {
-	border-right: 2px solid #e96b56;
-		color:#e96b56;
+	border-right: 2px solid red;
+		color:red;
 }
 
 .accordion-heading a.active,.accordion-heading a.active i {
-	color:#e96b56;
+	color:red;
 }
 
 /* icon */
 [class^="icon-"].active {
-	color:#e96b56;
+	color:red;
 }
 
 a i.icon-bglight:hover,
 a i.icon-bgdark:hover {
-  background: #e96b56;
+  background: red;
 }
 i.icon-bglight.active {
-  background: #e96b56;
+  background: red;
 }
 
 i.icon-bgdark.active {
-  background: #e96b56;
+  background: red;
 }
 ul.styledlist li:before {
-	color:#e96b56;
+	color:red;
 }
 
 /* logo icon */
 .logo h1 [class^="icon-"] {
-	color:#e96b56;
+	color:red;
 }
 
 .footer_logo h3 [class^="icon-"] {
-	color:#e96b56;
+	color:red;
 }
 
 /* CTA */
 .cta-text h2 span {
-	color:#e96b56;
+	color:red;
 }
 
 /*-- button -- */
 .btn-theme {
-  border:1px solid #e96b56;
-  background: #e96b56;
+  border:1px solid red;
+  background: red;
 }
 
 /* content */
 .box:hover .text h4 {
-	color:#e96b56;
+	color:red;
 }
 #inner-headline ul.breadcrumb li a:hover {
-	color:#e96b56;
+	color:red;
 }
 
 a.thumbnail:hover,
 a.thumbnail:focus {
-  border-color: #e96b56;
+  border-color: red;
 }
 
 /* blog */
 article .post-heading h3 a {
 	text-decoration:none;
-	color:#e96b56;
+	color:red;
 }
 
 .post-entry a.readmore:hover {
-	color:#e96b56;
+	color:red;
 }
 
 ul.cat li a:hover, ul.folio-detail li a:hover {
-	color:#e96b56;
+	color:red;
 }
 
 .meta-post a,.meta-post ul li i {
-  color: #e96b56;
+  color: red;
 }
 
 
 .meta-bottom li a:hover {
-	color:#e96b56;
+	color:red;
 }
 
 #pagination a:hover {
-  background: #e96b56;
+  background: red;
 }
 
 
 /* widgets */
 ul.popular li a {
-	color:#e96b56;
+	color:red;
 }
 
 /* component */
 .pagination ul > .active > a,
 .pagination ul > .active > span {
-  background: #e96b56;
-  border:1px solid #e96b56;
+  background: red;
+  border:1px solid red;
 }
 .pagination ul > .active > a:hover,
 .pagination ul > .active > span:hover {
-  background: #e96b56;
-  border:1px solid #e96b56;
+  background: red;
+  border:1px solid red;
 }
 .pagination ul > li > a:hover{
-  color:#e96b56;
+  color:red;
 }
 
 .pullquote-left {
-	border-left:5px solid #e96b56;
+	border-left:5px solid red;
 }
 
 .pullquote-right {
-	border-right:5px solid #e96b56;
+	border-right:5px solid red;
 }
 
 .pricing-box-wrap.special .pricing-heading {
-	background: #e96b56;
+	background: red;
 }
 
 /* portfolio */
 ul.portfolio-categ.filter li.active a {
-  color:#e96b56;
+  color:red;
 }
 
 /* portfolio */
 ul.team-categ.filter li.active a {
-  color:#e96b56;
+  color:red;
 }
 
 .grid figcaption {
@@ -236,8 +236,8 @@ ul.team-categ.filter li.active a {
 
 /* footer */
 footer a:hover {
-	color:#e96b56;
+	color:red;
 }
 footer ul.link-list li a:hover {
-	color:#e96b56;
+	color:red;
 }
